--- a/style/style.css
+++ b/style/style.css
@@ -78,8 +78,10 @@
 
 .webdevelopment-container {
   max-width: 1300px;
-  height: 1395px;
+  height: 1100px;
   margin: 74px auto;
+  border-radius: 16px;
+  background: rgba(13, 19, 33, 0.02);
 }
 
 .webdevelopment-content {
@@ -99,7 +101,6 @@
   height: 240px;
   margin: 48px auto;
   background-color: #fcfcfc;
-  box-shadow: 15px 25px #fcfcfc;
 }
 
 .box-header {
@@ -152,3 +153,35 @@
   width: 300px;
 }
 /*why web development style end*/
+
+/*my Inspiration style start*/
+
+.Inspiration-container {
+  max-width: 1300px;
+  height: 700px;
+  margin: 100px auto;
+}
+
+.inspiration-section {
+  text-align: center;
+  height: 700px;
+}
+
+.inspiration-titel {
+  text-align: center;
+  font-size: 30px;
+  font-weight: 800px;
+  margin-bottom: 20px;
+}
+
+.vedio-content {
+  width: 800px;
+  height: 500px;
+  padding: 15px;
+  text-align: center;
+  margin: 50px auto;
+  border: 1px solid #dcdada;
+  border-radius: 15px;
+}
+
+/*my Inspiration style end*/
